# dicom-privacy-kit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_ROBUSTNESS_AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RISK_AUDIT_SUMMARY.md  RISK_SCORING_AUDIT.md  examples_risk_scoring.py  pyproject.toml
.github/workflows/: tests.yml
dicom_privacy_kit/: __init__.py
dicom_privacy_kit/anonymizer/: __init__.py  engine.py  report.py
dicom_privacy_kit/cli/: __init__.py  __main__.py  anonymize.py  diff.py  score.py
dicom_privacy_kit/core/: __init__.py  actions.py  profiles.py  tags.py  utils.py
dicom_privacy_kit/diff/: __init__.py  dataset_diff.py  element_compare.py
dicom_privacy_kit/risk/: __init__.py  scorer.py  weights.py
tests/: __init__.py  test_actions.py  test_basic_profile.py  test_cli.py  test_diff.py  test_diff_values.py  test_engine.py  test_error_logging.py  test_private_tags.py  test_profiles.py  test_ps3_15_compliance.py  test_report.py  test_risk.py  test_risk_audit.py  test_sequence_handling.py  test_tag_handling.py  test_utils.py
